--- a/sm-shop/src/main/resources/bundles/messages.properties
+++ b/sm-shop/src/main/resources/bundles/messages.properties
@@ -5,6 +5,7 @@ message.productreview.created=You have successfully created a product review
 message.email.error=An error occurred while sending your message, pleas try again later
 message.access.denied=Access denied
 message.error.shoppingcart.update=An error occurred while updating the shopping cart
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 message.username.password=Login Failed. Username or Password is incorrect.
 message.resource.notfound=The requested page does not exist.
 message.fielderror=Field error
@@ -212,6 +213,7 @@ registration.failed=Unable to complete registration, please try again later
 currentpassword.not.empty=Please provide your current password
 newpassword.not.empty=Please provide a new password
 repeatpassword.not.empty=Please provide repeated password
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 message.invalidpassword=Invalid password
 message.cookie.policy=This website uses cookies to guarantee you the best experience on our website.
 
