--- a/sm-shop/src/main/resources/bundles/messages_fr.properties
+++ b/sm-shop/src/main/resources/bundles/messages_fr.properties
@@ -5,6 +5,7 @@ message.productreview.created=Votre avez créé une revue de produit avec succè
 message.email.error=Une erreur est survenue avec l''envoi du message, veuillez essayer plus tard
 message.error.shoppingcart.update=Une erreur est survenue pendant la mise à jour du panier d'achat
 message.access.denied=Accès refusé
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 message.username.password=Authentication échouée. Le nom d\\'usager ou le mot de passe est invalide.
 message.resource.notfound=La page demandée n'existe pas
 message.fielderror=Entrée erronnée
@@ -212,6 +213,7 @@ registration.failed=Une erreur est survenue lors de l'enregistrement veuillez re
 currentpassword.not.empty=Veuillez fournir votre mot de passe actuel
 newpassword.not.empty=Veuillez fournir un nouveau mot de passe valide
 repeatpassword.not.empty=Veuillez répéter le nouveau mot de passe
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 message.invalidpassword=Mot de passe invalide
 
 error.code.99=Une erreur s\\'est produite en essayant de traîter le paiement (99)
