--- a/sm-shop/src/main/resources/bundles/payment_fr.properties
+++ b/sm-shop/src/main/resources/bundles/payment_fr.properties
@@ -24,6 +24,7 @@ module.payment.transactiontype.sale=Vente
 module.payment.transactiontype.refund=Remboursement
 
 #PayPal
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 module.payment.paypal-express-checkout.userid=Usager PayPal API
 module.payment.paypal-express-checkout.apikey=Mot de pass APImodule.payment
 module.payment.paypal-express-checkout.signature=PayPal API signature
@@ -38,16 +39,19 @@ module.payment.paypal.message.secret=PayPal secret est requis
 
 module.payment.paypal.message.identifier=Usager API PayPal requis
 module.payment.paypal.message.api=Clée API PayPal requise
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 module.payment.paypal.message.password=PayPal API mot de passe requis
 module.payment.paypal.message.signature=PayPal API signature requise
 
 #Beanstream
 module.payment.beanstream.merchantid=Identifiant marchand
 module.payment.beanstream.username=Nom d'usager
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 module.payment.beanstream.password=Mot de passe
 
 module.payment.beanstream.message.merchantid=Identifiant marchand requis
 module.payment.beanstream.message.username=Nom d'usager requis
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 module.payment.beanstream.message.password=Mot de passe requis
 
 #Moneyorder
