--- a/sm-shop/src/main/resources/bundles/shipping_fr.properties
+++ b/sm-shop/src/main/resources/bundles/shipping_fr.properties
@@ -26,6 +26,7 @@ module.shipping.international=International
 #Canada Post
 module.shipping.canadapost.identifier=Identifiant Postes Canada (numéro CPC)
 module.shipping.canadapost.username=Nom d'usager Postes Canada (première partie de la clé API avant les 2 points :)
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 module.shipping.canadapost.password=Mot de passe Postes Canada (deuxième partie de la clé API après les 2 points :)
 module.shipping.canadapost.apikey=Clé API Postes Canada
 module.shipping.canadapost.services=Services de postage à calculer
