--- a/sm-shop/src/main/resources/bundles/shopizer_fr.properties
+++ b/sm-shop/src/main/resources/bundles/shopizer_fr.properties
@@ -81,6 +81,7 @@ label.generic.providedby=Propulsé par
 label.generic.title=Titre
 label.generic.keywords=Mots clés
 label.generic.amount=Montant
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 label.generic.changepassword=Change password
 
 label.generic.confirm=Veuillez confirmer!
@@ -157,8 +158,11 @@ label.search.searchQuery=mots recherchés
 label.search.items.found=article(s) trouvé(s)
 
 
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 label.generic.password=Mot de passe
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 label.generic.repeatpassword=Répéter le mot de passe
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 label.generic.newpassword=Nouveau mot de passe
 label.generic.newpassword.repeat=Répéter le nouveau mot de passe
 
@@ -285,11 +289,15 @@ label.order.displayagreement=Afficher les termes et conditions dans la page d'ac
 label.order.notes=Notes
 label.order.notes.eg=Notes pour la commande ou pour la livraison
 
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 label.customer.currentpassword=Mot de passe actuel
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 label.customer.newpassword=Nouveau mot de passe
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 label.customer.repeatpassword=Répéter le mot de passw
 
 label.customer.createaccount=Créer un compte ?
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 label.customer.accountpassword=Mot de passe du compte
 label.customer.createaccount.text=Créez un compte en fournissant les informations requises ci-bas. Si vous possédez déjà un compte utilisez le lien au haut de la page permettant de vous authentifier.
 
@@ -615,6 +623,7 @@ label.emailconfig.protocol=Protocole
 label.emailconfig.host=Hôte
 label.emailconfig.port=Port
 label.emailconfig.username=Nom d'usager
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 label.emailconfig.password=Mot de passe
 label.emailconfig.smtpauth=Authentication requise
 label.emailconfig.starttls=STARTTLS
@@ -704,7 +713,9 @@ button.label.select = Sélectionner
 button.label.subscribe = S'abonner
 button.label.printreport=Imprimer un rapport
 button.label.upload.images=Ajouter des fichiers
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 button.label.resetpassword=Ré-initialiser le mot de passe
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 button.label.forgotpassword=Mot de passe oublié ?
 button.label.view=Détails
 button.label.addToCart=Ajouter au panier
@@ -738,6 +749,7 @@ menu.profile=Profile
 menu.users=Utilisateurs
 menu.user=Utilisateur
 menu.myprofile=Mon profile
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 menu.change-password=Changement de mot de passe
 menu.create-user=Créer un utilisateur
 menu.create-store=Créer une boutique
